--- a/public/about.html
+++ b/public/about.html
@@ -47,48 +47,20 @@
   <body>
     <header>
       <br />
-      <h2>About Me</h2>
-      <a href="index.html">back to homepage</a>
-      <p>Front-end developer from Montreal, Canada, based in Europe</p>
+      <h2>Online Winkel</h2>
+      <a href="index.html">Terug naar Beginn pagine</a>
+      <p>Jurken</p>
     </header>
     <ul>
       <div class="introduction">
-        My introduction to coding took place thanks to my daughter. Knowing that
-        I was looking for a new challenge, she suggested I took a look at
-        SheCodes coding courses. I had always been very curious about coding and
-        although I found it incredible challenging, or perhaps because I did, I
-        inscribed, celebrating the feeling of now having a clue about what it'd
-        be about.
+        Iedere meisje wilt op haar mooiste zijn op een bijzondere moment. Welke past het ebste bij jou?
+
         <br />
-        Because of the vast experience I have in different working fields, I
-        usually know something of any topic I come across. But things were
-        different this time, and a subtle memory of a excursion I once enrolled
-        in to the Pyramids, and ended up with a bus full of Swedish tourists,
-        came to mind. It is very rare that I don't understand a word foreigners
-        are saying, but this time, I not only didn't understand sounds either.
-        Only one sound stuck, as I heard it many times, and apparently it meant
-        "but". Does it say something about the Swedish culture? We'll discuss
-        that another time. For now, SheCodes, and the free introduction course
-        from the hand of Matt Delac are inspring me a lot...
       </div>
       <div class="introduction">
-        My introduction to coding took place thanks to my daughter. Knowing that
-        I was looking for a new challenge, she suggested I took a look at
-        SheCodes coding courses. I had always been very curious about coding and
-        although I found it incredible challenging, or perhaps because I did, I
-        inscribed, celebrating the feeling of now having a clue about what it'd
-        be about.
+        Jurken zijn gemaakt uit ...
+        Verschillende kleuren
         <br />
-        Because of the vast experience I have in different working fields, I
-        usually know something of any topic I come across. But things were
-        different this time, and a subtle memory of a excursion I once enrolled
-        in to the Pyramids, and ended up with a bus full of Swedish tourists,
-        came to mind. It is very rare that I don't understand a word foreigners
-        are saying, but this time, I not only didn't understand sounds either.
-        Only one sound stuck, as I heard it many times, and apparently it meant
-        "but". Does it say somethingabout the Swedish culture? We'll discuss
-        that another time. For now, SheCodes, and the free introduction course
-        from the hand of Matt Delac are inspiring me a lot...
       </div>
     </ul>
 
@@ -98,7 +70,7 @@
        <div class="card-group">
            <div class="card" style="width:18rem;">
              <div class="card-body">
-               <h5 class="card-title">Furry Friends</h5>
+               <h5 class="card-title">Model Cecile</h5>
 
                
        <img class="img-fluid rounded w-100"
