--- a/public/about.html
+++ b/public/about.html
@@ -47,8 +47,8 @@
   <body>
     <header>
       <br />
-      <h2>Online Winkel</h2>
-      <a href="index.html">Terug naar Beginn pagine</a>
+      <h1>Online Winkel</h1>
+      <a href="index.html">Over Ons</a>
       <p>Jurken</p>
     </header>
     <ul>
